@@ -9,3 +9,4 @@ Fixed an issue populating multi-select fields with the existing entry value on t
 Fixed the $original_entry parameter not being passed when the gform_after_update_entry hook is triggered on entry update by the user input step.
 Fixed empty fields being displayed on the user input step when 'show empty fields' was not enabled.
 Fixed an issue with the shortcode where the gravityflow_status_filter and gravityflow_permission_granted_entry_detail filters don't fire.
+Fixed the Dropbox step for Gravity Forms Dropbox Add-On versions 2.0+.
